@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18672: Fixed format specifiers for Py_ssize_t in debugging output in
+  the _sre moduel.
+
 - Issue #18830: inspect.getclasstree() no more produces duplicated entries even
   when input list contains duplicates.
 
